[bdist_wheel]
universal = 1

[metadata]
name = pycodestyle
author = Johann C. Rocholl
author_email = johann@rocholl.net
maintainer = Ian Lee
maintainer_email = IanLee1521@gmail.com
license = Expat
license_file = LICENSE
description = Python style guide checker
long_description = file: README.rst, CHANGES.txt
keywords =
    pycodestyle,
    pep8,
    PEP
    8,
    PEP-8,
    PEP8
url = https://pycodestyle.readthedocs.io/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = pycodestyle
zip_safe = False
install_requires = setuptools>=42; wheel; read_version[toml] >= 0.3.0
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
test_suite = testsuite.test_all.suite

[options.entry_points]
console_scripts = pycodestyle = pycodestyle:_main

[pycodestyle]
select =
ignore = E226,E24,W504
max_line_length = 79
max_doc_length = 72
