[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[pycodestyle]
select =
ignore = E226,E24,W504
max_line_length = 79
max_doc_length = 72

[coverage:run]
plugins = covdefaults
omit =
    # TODO: separate the tests from the test data
    testsuite/E*.py
    testsuite/W*.py
    testsuite/latin-1.py
    testsuite/noqa.py
    testsuite/python*.py
    testsuite/utf-8-bom.py
parallel = true

[coverage:report]
fail_under = 93
