[metadata]
name = pycodestyle
version = attr: pycodestyle.__version__
description = Python style guide checker
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pycodestyle.pycqa.org/
author = Johann C. Rocholl
author_email = johann@rocholl.net
maintainer = Ian Lee
maintainer_email = IanLee1521@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
keywords = pycodestyle, pep8, PEP 8, PEP-8, PEP8
project_urls =
    Changes=https://pycodestyle.pycqa.org/en/latest/developer.html#changes

[options]
py_modules = pycodestyle
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    pycodestyle = pycodestyle:_main

[bdist_wheel]
universal = 1

[pycodestyle]
ignore = E226,E24,W504
max_line_length = 79
max_doc_length = 72

[coverage:run]
plugins = covdefaults
omit = testing/data

[coverage:report]
fail_under = 93
